# LanChat

./: .gitmodules  CMakeLists.txt  Client.cpp  Client.h  Connect.cpp  Connect.h  FindServer.cpp  FindServer.h  Globals.h  INIFile.cpp  INIFile.h  InputOutputHandler.cpp  InputOutputHandler.h  LICENSE.md  README.md  Server.cpp  Server.h  Singleton.cpp  Singleton.h  main.cpp
